tests/test-files/parse-continue.txt
================================================================================
1 Parse continue
================================================================================

(package coalton-unit-tests)

(define (f)
  (for ()
    (continue)))

================================================================================
2 Parse continue
================================================================================

(package coalton-unit-tests)

(define (f)
  (for ()
    (let _x = True)
    (continue)))

================================================================================
Parse continue
================================================================================

(package coalton-unit-tests)

(define (f)
  (for ()
    :while True
    (continue)))

================================================================================
Parse continue
================================================================================

(package coalton-unit-tests)

(define (f)
  (for ()
    (let _x = 1)
    (continue)))

================================================================================
Parse continue
================================================================================

(package coalton-unit-tests)

(define (f)
  (for :alabel ()
    (continue)))

================================================================================
Parse continue
================================================================================

(package coalton-unit-tests)

(define (f)
  (for :alabel ()
    (continue :alabel)))

================================================================================
Parse continue
================================================================================

(package coalton-unit-tests)

(define (f)
  (for :somelabel ()
    (for :anotherlabel ()
      (continue :somelabel))))

================================================================================
Invalid continue
================================================================================

(package test-parser)

(define f (continue))

--------------------------------------------------------------------------------

error: Invalid continue
  --> test:3:10
   |
 3 |  (define f (continue))
   |            ^^^^^^^^^^ continue does not appear in an enclosing for

================================================================================
Invalid argument in continue
================================================================================

(package test-parser)

(define f
  (for :foo ()
    (continue notakeyword)))

--------------------------------------------------------------------------------

error: Invalid argument in continue
  --> test:5:4
   |
 5 |      (continue notakeyword)))
   |      ^^^^^^^^^^^^^^^^^^^^^^ expected a keyword

================================================================================
Invalid label in continue
================================================================================

(package test-parser)

(define f
  (for :foo ()
    (continue :not-foo)))

--------------------------------------------------------------------------------

error: Invalid label in continue
  --> test:5:14
   |
 5 |      (continue :not-foo)))
   |                ^^^^^^^^ label not found in any enclosing for

================================================================================
Invalid continue
================================================================================

(package test-parser)

(define f
  (for ()
    (let ((continuer (fn () (continue))))
      (continuer))))

--------------------------------------------------------------------------------

error: Invalid continue
  --> test:5:28
   |
 5 |      (let ((continuer (fn () (continue))))
   |                              ^^^^^^^^^^ continue does not appear in an enclosing for

================================================================================
Invalid label in continue
================================================================================

(package test-parser)

(define f
  (for :blech ()
    (let ((continuer (fn () (continue :blech))))
      (continuer))))


--------------------------------------------------------------------------------

error: Invalid label in continue
  --> test:5:38
   |
 5 |      (let ((continuer (fn () (continue :blech))))
   |                                        ^^^^^^ label not found in any enclosing for
